changed header text and fixed horizontal scroll

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -11,7 +11,9 @@ img {
 body {
   width: 100%;
   background-color: cyan;
+  overflow-x: hidden;
 }
+
 
 .jumbotron {
   background-image: url("/assets/images/stock-photos/socialbossheroimage.jpg");
@@ -24,7 +26,6 @@ body {
 
 .jumbotron-text {
   color: rgb(255, 49, 111);
-  font-family: cursive;
   text-decoration-line: underline;
   margin-top: 35vh;
   text-align: center;
